# tempfori

./: README.md  pyproject.toml  setup.cfg
apps/acc/: admin.py  apps.py  models.py
apps/acc/api/: serializers.py  urls.py  views.py
apps/acc/migrations/: 0001_initial.py
apps/d11/: admin.py  apps.py  tasks.py  urls.py  views.py
apps/d11/api/: serializers.py  urls.py  views.py
apps/d11/collector/: __init__.py  _base.py  _registry.py  vak.py
apps/d11/migrations/: 0001_initial.py  0002_auto_20210818_2206.py  0003_aleph_ids.py  0004_too_much.py  0005_docalephcard_files_export.py  0006_alter_doc_options.py  0007_auto_20211111_1310.py  0008_source_is_enabled.py  0009_ready_and_autoref_bools.py  0010_alter_exporttoaleph_kind.py  0011_ru.py  0012_new_age.py  0013_docs_fields_sorting.py  0014_docs_files.py  0015_docs_files.py  0016_ref.py
apps/d11/models/: __init__.py  aleph.py  collector.py  doc.py  doc_aleph.py  ref.py  source.py
apps/d11/serializers/: __init__.py
apps/d11/services/: aleph_cards_files_external_storage.py  aleph_import.py  aleph_transport.py  excel_report.py  report_xlsx.py
apps/d11/sql/: post_migrate.sql
apps/d11/templatetags/: d11_admin.py
apps/main/: admin.py  models.py  tasks.py
apps/main/migrations/: 0001_initial.py  0002_ru.py
apps/main/msg/: __init__.py  template.py
apps/main/services/: email_notification.py  mark.py
docker/: Dockerfile  docker-compose-dev.yml  docker-compose-local.yml
docker/entry-point/: entry-point.sh
docker/entry-point/prod/: django.sh
docker/nginx/dev/: nginx.conf
fixtures/: acc.json  celery_schedule.json  doc_fields.json  ref.json  source.json  webshell.json
project/: __init__.py  celery.py  urls.py
project/contrib/: datetime.py
project/settings/: __init__.py
static/admin/: admin.css  admin.css.map  admin.js  admin.less
templates/admin/: base_site.html
(+72 files in other folders)
